plugins {
    id 'java'
    id "com.gradleup.shadow" version "9.0.0-rc2"
}

group = 'me.cocolennon'
version = '1.2.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        url = 'https://hub.jeff-media.com/nexus/repository/jeff-media-public/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT'
    implementation 'com.jeff-media:MorePersistentDataTypes:2.4.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

shadowJar {
    relocate 'com.jeff-media.morepersistentdatatypes', 'me.cocolennon.morepersistentdatatypes'
    archiveFileName = "FilteringHoppers-${version}.jar"
    destinationDirectory = file('./builds')
}